<resources>
    <string name="app_name">UnBroke Budget Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="saving_tip">Saving Tip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcomedesc">Login to UnBroke</string>
    <string name="email">Email</string>
    <string name="emailadd">Email address</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="forgotPass">Forgot Password</string>
    <string name="login">Login</string>
    <string name="noacc">Dont have account?</string>
    <string name="createacc">Create Now!</string>
    <string name="register">Register</string>
    <string name="registerdesc">Create a new account</string>
    <string name="username">Username</string>
    <string name="mobilenum">Mobile Number</string>
    <string name="hasacc">Already have account?</string>
    <string name="enteremail">Enter your email</string>
    <string name="othermethod">Choose another method</string>
    <string name="help">Need help?</string>
    <string name="otp">Send code</string>
    <string name="textview">TextView</string>
    <string name="total_daily_balance">Total Daily Balance</string>
    <string name="accountSettings">Account settings</string>
    <string name="remember">Remember me</string>
    <string name="signout">Sign Out</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <string name="hyperlinkInvest"> <a href="https://www.strawberryinvest.com/knowledge-hub/top-10-tips-for-first-time-investors/">learn more</a></string>
    <string name="hyperlinkEmergency"><a href="https://www.wellsfargo.com/financial-education/basic-finances/manage-money/cashflow-savings/emergencies/">learn more</a></string>
    <string name="hyperlinkDonation"><a href="https://donorbox.org/nonprofit-blog/fundraising-sites-for-nonprofits-and-individuals#1">learn more</a></string>
</resources>