<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A434E"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/TVRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVRegisterDesc" />

    <TextView
        android:id="@+id/TVMobileNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/mobilenum"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETEmail" />

    <EditText
        android:id="@+id/ETMobileNum"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@xml/corner_rect"
        android:ems="10"
        android:hint="@string/mobilenum"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVMobileNum" />

    <EditText
        android:id="@+id/ETUsername"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:background="@xml/corner_rect"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVUsername" />

    <TextView
        android:id="@+id/TVEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETUsername" />

    <EditText
        android:id="@+id/ETEmail"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@xml/corner_rect"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVEmail2" />

    <TextView
        android:id="@+id/TVRegisterDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/registerdesc"
        android:textColor="#C4C4C4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVRegister" />

    <TextView
        android:id="@+id/TVPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETMobileNum" />

    <EditText
        android:id="@+id/ETPass"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@xml/corner_rect"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVPassword2" />

    <Button
        android:id="@+id/Btnregister"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@xml/corner_rect"
        android:backgroundTint="#29B6F6"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPass" />

    <TextView
        android:id="@+id/TVHasAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hasacc"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btnregister" />

    <TextView
        android:id="@+id/TVLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/TVHasAcc"
        app:layout_constraintTop_toBottomOf="@+id/Btnregister" />

</androidx.constraintlayout.widget.ConstraintLayout>