<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A434E"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/TVWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVWelcomeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcomedesc"
        android:textColor="#C4C4C4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVWelcome" />

    <TextView
        android:id="@+id/TVEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVWelcomeDesc" />

    <EditText
        android:id="@+id/ETmail"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVEmail" />

    <TextView
        android:id="@+id/TVPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETmail" />

    <EditText
        android:id="@+id/ETPassword"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVPassword" />

    <TextView
        android:id="@+id/TVForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgotpass"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPassword" />

    <Button
        android:id="@+id/BtnLogin"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/corner_rect"
        android:backgroundTint="#29B6F6"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPassword" />

    <TextView
        android:id="@+id/TVCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/createacc"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnLogin" />

    <TextView
        android:id="@+id/TVNoAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/noacc"
        android:textColor="#616161"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnLogin" />

    <ImageView
        android:id="@+id/IVGoogle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/google_svgrepo_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVNoAcc" />

    <ImageView
        android:id="@+id/IVFacebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/facebook_svgrepo_com"
        app:layout_constraintStart_toEndOf="@+id/IVGoogle"
        app:layout_constraintTop_toBottomOf="@+id/TVNoAcc" />

    <ImageView
        android:id="@+id/IVInsta"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/instagram_1_svgrepo_com"
        app:layout_constraintStart_toEndOf="@+id/IVFacebook"
        app:layout_constraintTop_toBottomOf="@+id/TVCreateAcc" />

</androidx.constraintlayout.widget.ConstraintLayout>