<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E5E5E5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".savingTips">

        <TextView
            android:id="@+id/savingTipID"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="560dp"
            android:gravity="left"
            android:text="@string/saving_tip"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/contentTip"
            android:layout_width="357dp"
            android:layout_height="77dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savingTipID" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="413dp"
            android:layout_height="637dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/slide_rounded_rectangle_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentTip">

            <TableLayout
                android:layout_width="413dp"
                android:layout_height="512dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:id="@+id/RowInvest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/rounded_rectangle_green">

                            <ImageView
                                android:id="@+id/circle1"
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/circle_white"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/iconinvest"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/icon_investment2"
                                app:layout_constraintBottom_toBottomOf="@+id/circle1"
                                app:layout_constraintEnd_toEndOf="@+id/circle1"
                                app:layout_constraintStart_toStartOf="@+id/circle1"
                                app:layout_constraintTop_toTopOf="@+id/circle1" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/investment_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Investment"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:orientation="vertical">

                    <TextView
                        android:id="@+id/infoInvest"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Top 10 Tips for First time investors."
                        android:textColor="@color/black"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/linkInvest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="italic"
                        android:textSize="11dp"
                        android:text="@string/hyperlinkInvest"/>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/RowEmergency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/rounded_rectangle_green">

                            <ImageView
                                android:id="@+id/circle2"
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/circle_white"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/iconemergency"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/icon_emergency"
                                app:layout_constraintBottom_toBottomOf="@+id/circle2"
                                app:layout_constraintEnd_toEndOf="@+id/circle2"
                                app:layout_constraintStart_toStartOf="@+id/circle2"
                                app:layout_constraintTop_toTopOf="@+id/circle2" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/emergencytext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Emergency"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/infoEmergency"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Emergency savings should be placed in an account that is easily accessible, so you do not incur early-withdrawal penalties as you would with an account such as a certificate of deposit (CD) or Individual Retirement Account (IRA)."
                            android:textColor="@color/black"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/linkEmergency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="10dp"
                            android:textStyle="italic"
                            android:textSize="11dp"
                            android:text="@string/hyperlinkEmergency"/>
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/RowDonation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/rounded_rectangle_green">

                            <ImageView
                                android:id="@+id/circle3"
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/circle_white"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/icondonation"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/icon_donation"
                                app:layout_constraintBottom_toBottomOf="@+id/circle3"
                                app:layout_constraintEnd_toEndOf="@+id/circle3"
                                app:layout_constraintStart_toStartOf="@+id/circle3"
                                app:layout_constraintTop_toTopOf="@+id/circle3" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/donationtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Donation"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/infoDonation"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="12 of the Best Fundraising Sites for Nonprofits and Individuals"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/linkDonation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="10dp"
                            android:textStyle="italic"
                            android:textSize="11dp"
                            android:text="@string/hyperlinkDonation"/>
                    </LinearLayout>

                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>